feat(fonts): add spotify fonts

--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -1,4 +1,6 @@
 :root {
+  --font-circular-sp-family: CircularSpBook, Helvetica, Arial, sans-serif;
+
   --color-backround: #191414;
 
   --primary-color: #1DB954;
