--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,2 +1,13 @@
 @import "normalize";
 @import "vars";
+@import "fonts";
+
+body {
+  font-family: var(--font-circular-sp-family);
+  background-color: var(--color-backround);
+  min-height: 100vh;
+}
+
+button {
+  font-family: var(--font-circular-sp-family);
+}
