--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -1,8 +1,7 @@
 :root {
-  --font-circular-sp-family: CircularSpBook, Helvetica, Arial, sans-serif;
-
-  --color-backround: #191414;
-
+  --font-circular-sp-bold-family: CircularSpCyrlBold, CircularSpBold, Helvetica, Arial, sans-serif;
+  --font-circular-sp-book-family: CircularSpCyrlBook, CircularSpBook, Helvetica, Arial, sans-serif;
+  --backround-color: #191414;
   --primary-color: #1DB954;
   --white-color: #ffffff;
 }
