--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -1,7 +1,12 @@
 :root {
-  --font-circular-sp-bold-family: CircularSpCyrlBold, CircularSpBold, Helvetica, Arial, sans-serif;
-  --font-circular-sp-book-family: CircularSpCyrlBook, CircularSpBook, Helvetica, Arial, sans-serif;
-  --backround-color: #191414;
+  --font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  --primary-text-color: #E6E6E6;
   --primary-color: #1DB954;
+  --primary-color-hover: #1BD760;
+  --primary-color-active: #14A349;
+
+  --backround-color: #191414;
   --white-color: #ffffff;
+
+  --hover-transition: all 0.1s ease;
 }
